Fixed overflow x on body

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  @apply font-display bg-light dark:bg-dark;
+  @apply font-display bg-light dark:bg-dark overflow-x-hidden;
 }
 
 ::-webkit-scrollbar {
